--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </style>
 </head>
 <body>
-  <h1>Tabela de Classificação <img src="imagens/serieA.png" alt=""></h1>
+  <h1>Tabela de Classificação <img src="serieA.png" alt=""></h1>
 
   <table border="1" cellspacing="0" cellpadding="8">
     <thead>
@@ -141,3 +141,4 @@
   </table>
 </body>
 </html>
+
