Refactor HTML structure and styles for clarity

--- a/index.html
+++ b/index.html
@@ -58,6 +58,133 @@
     .ultimo:hover{
         background-color: red;
     }
+    div{
+        display: flex;
+        justify-content: center;
+    }
+    .rebaixar{
+        margin: 0px 10px;
+        background-color: red;
+        height: 15px;
+        width: 15px;
+    }
+    .campeao{
+        margin: 0px 10px;
+        background-color: #00ff00ba;
+        height: 15px;
+        width: 15px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Tabela de Classificação <img src="serieA.png" alt=""></h1>
+
+  <table border="1" cellspacing="0" cellpadding="8">
+    <thead>
+      <tr>
+        <th>Posição</th>
+        <th>Nome</th>
+        <th>Pontos</th>
+        <th>Jogos</th>
+        <th>Vitórias</th>
+        <th>Empates</th>
+        <th>Derrotas</th>
+        <th>Gols</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="primeiro">
+        <td>1</td>
+        <td>Bruno</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Henrique</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Kayque</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>Lucas</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+      </tr>
+      <tr class="ultimo">
+        <td>5</td>
+        <td>Theo</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+      </tr>
+      <tr class="ultimo">
+        <td>6</td>
+        <td>Samuel</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+      </tr>
+    </tbody>
+  </table>
+  <!--<br>
+  <div><div class="rebaixar"></div>Rebaixado</div>
+  <br>
+  <div><div class="campeao"></div>Campeão</div>
+    -->
+</body>
+</html>    tr:hover {
+        transition: 1s;
+        background-color: #333333;
+    }
+    img{
+        position: relative;
+        margin: 0px 0px -18px 0px;
+        width: 60px;
+    }
+    tbody {
+    text-align: center;
+    }
+    .primeiro {
+    background-color: #00ff0026;
+    }
+    .primeiro:hover{
+        background-color: #00ff00ba;
+    }
+    .ultimo{
+        background-color: #ff000063;
+    }
+    .ultimo:hover{
+        background-color: red;
+    }
   </style>
 </head>
 <body>
@@ -141,4 +268,3 @@
   </table>
 </body>
 </html>
-
