--- a/index.html
+++ b/index.html
@@ -84,18 +84,22 @@
       <tr>
         <th>Posição</th>
         <th>Nome</th>
-        <th>Pontos</th>
-        <th>Jogos</th>
-        <th>Vitórias</th>
-        <th>Empates</th>
-        <th>Derrotas</th>
-        <th>Gols</th>
+        <th>Pts</th>
+        <th>JG</th>
+        <th>V</th>
+        <th>E</th>
+        <th>D</th>
+        <th>G M</th>
+        <th>G S</th>
+        <th>S G</th>
       </tr>
     </thead>
     <tbody>
       <tr class="primeiro">
         <td>1</td>
         <td>Bruno</td>
+        <td>0</td>
+        <td>0</td>
         <td>0</td>
         <td>0</td>
         <td>0</td>
@@ -112,10 +116,14 @@
         <td>0</td>
         <td>0</td>
         <td>0</td>
+        <td>0</td>
+        <td>0</td>
       </tr>
       <tr>
         <td>3</td>
         <td>Kayque</td>
+        <td>0</td>
+        <td>0</td>
         <td>0</td>
         <td>0</td>
         <td>0</td>
@@ -132,6 +140,8 @@
         <td>0</td>
         <td>0</td>
         <td>0</td>
+        <td>0</td>
+        <td>0</td>
       </tr>
       <tr class="ultimo">
         <td>5</td>
@@ -142,10 +152,14 @@
         <td>0</td>
         <td>0</td>
         <td>0</td>
+        <td>0</td>
+        <td>0</td>
       </tr>
       <tr class="ultimo">
         <td>6</td>
         <td>Samuel</td>
+        <td>0</td>
+        <td>0</td>
         <td>0</td>
         <td>0</td>
         <td>0</td>
