--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Tabela de Classificação</title>
+  <title>Serie A</title>
   <style>
     body {
       background-color: #121212;
@@ -12,7 +12,7 @@
       margin: 0px;
     }
     h1 {
-        margin: 0px 0px 49px 0px;
+        margin: 30px 0px 49px 0px;
       color: #ffffff;
     }
     table {
@@ -77,21 +77,22 @@
   </style>
 </head>
 <body>
+  <div>
   <h1>Tabela de Classificação <img src="serieA.png" alt=""></h1>
-
+  </div>
   <table border="1" cellspacing="0" cellpadding="8">
     <thead>
       <tr>
-        <th>Posição</th>
+        <th>Pos</th>
         <th>Nome</th>
         <th>Pts</th>
-        <th>JG</th>
+        <th>J</th>
         <th>V</th>
         <th>E</th>
         <th>D</th>
-        <th>G M</th>
-        <th>G S</th>
-        <th>S G</th>
+        <th>M</th>
+        <th>S</th>
+        <th>S</th>
       </tr>
     </thead>
     <tbody>
@@ -169,10 +170,9 @@
       </tr>
     </tbody>
   </table>
-  <!--<br>
+  <br>
   <div><div class="rebaixar"></div>Rebaixado</div>
   <br>
   <div><div class="campeao"></div>Campeão</div>
-    -->
 </body>
 </html>
