--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
   <div>
-  <h1>Tabela de Classificação <img src="serieA.png" alt=""></h1>
+  <h1>Classificação <img src="serieA.png" alt=""></h1>
   </div>
   <table border="1" cellspacing="0" cellpadding="8">
     <thead>
@@ -176,3 +176,4 @@
   <div><div class="campeao"></div>Campeão</div>
 </body>
 </html>
+
