--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
         <td>0</td>
         <td>0</td>
       </tr>
-      <tr class="ultimo">
+      <tr>
         <td>5</td>
-        <td>Theo</td>
+        <td>Breno</td>
         <td>0</td>
         <td>0</td>
         <td>0</td>
@@ -158,6 +158,18 @@
       </tr>
       <tr class="ultimo">
         <td>6</td>
+        <td>Theo</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+      </tr>
+      <tr class="ultimo">
+        <td>7</td>
         <td>Samuel</td>
         <td>0</td>
         <td>0</td>
@@ -176,4 +188,5 @@
   <div><div class="campeao"></div>Campeão</div>
 </body>
 </html>
+
 
