--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </tr>
       <tr>
         <td>3</td>
-        <td>Kayque</td>
+        <td>Henrique</td>
         <td>0</td>
         <td>0</td>
         <td>0</td>
@@ -134,7 +134,7 @@
       </tr>
       <tr>
         <td>4</td>
-        <td>Lucas</td>
+        <td>Kayque</td>
         <td>0</td>
         <td>0</td>
         <td>0</td>
@@ -146,6 +146,18 @@
       </tr>
       <tr>
         <td>5</td>
+        <td>Lucas</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>6</td>
         <td>Breno</td>
         <td>0</td>
         <td>0</td>
@@ -157,7 +169,7 @@
         <td>0</td>
       </tr>
       <tr class="ultimo">
-        <td>6</td>
+        <td>7</td>
         <td>Theo</td>
         <td>0</td>
         <td>0</td>
@@ -169,7 +181,7 @@
         <td>0</td>
       </tr>
       <tr class="ultimo">
-        <td>7</td>
+        <td>8</td>
         <td>Samuel</td>
         <td>0</td>
         <td>0</td>
@@ -188,5 +200,6 @@
   <div><div class="campeao"></div>Campeão</div>
 </body>
 </html>
+
 
 
