--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </tr>
       <tr>
         <td>2</td>
-        <td>Henrique</td>
+        <td>Celso</td>
         <td>0</td>
         <td>0</td>
         <td>0</td>
@@ -200,6 +200,7 @@
   <div><div class="campeao"></div>Campeão</div>
 </body>
 </html>
+
 
 
 
